// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render test render to html on local server: MD file on sub directory 1`] = `
{
  "body": "
<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
    <link rel="stylesheet" type="text/css" href="/test.css">
<link rel="stylesheet" type="text/css" href="https://hoo.bar/styles/test.css">
</head>
<body>
    <h1>こんにちは世界</h1>
<p><em>Hello</em></p>

</body>",
  "contentType": "text/html",
  "statusCode": 200,
}
`;

exports[`render test render to html on local server: Not Found 1`] = `
{
  "body": "Not Found",
  "contentType": "text/plain",
  "statusCode": 404,
}
`;

exports[`render test render to html on local server: css file 1`] = `
{
  "body": "h1 {
    border-bottom: 3px solid grey;
    text-align: center;
}
",
  "contentType": "text/css",
  "statusCode": 200,
}
`;

exports[`render test render to html on local server: html file 1`] = `
{
  "body": "
<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
    <link rel="stylesheet" type="text/css" href="/test.css">
<link rel="stylesheet" type="text/css" href="https://hoo.bar/styles/test.css">
</head>
<body>
    <h1>markdown-it-pdf</h1>
<h2>abstract</h2>
<h2>function</h2>
<h2>refer to</h2>
<ul>
<li><a href="https://www.npmjs.com/package/markdown-it">markdown-it</a></li>
<li><a href="https://www.npmjs.com/package/puppeteer">puppeteer</a></li>
</ul>

</body>",
  "contentType": "text/html",
  "statusCode": 200,
}
`;

exports[`render test render to html on local server: txt file 1`] = `
{
  "body": "hello world.
",
  "contentType": "text/plain",
  "statusCode": 200,
}
`;
